# order_management_rest_api

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_add_users_table.py  002_add_orders_table.py
app/: main.py
app/core/: config.py  database.py  events.py  redis_client.py  security.py
app/models/: __init__.py  order.py  user.py
app/routes/: auth.py  orders.py
app/schemas/: auth.py  order.py  user.py
app/services/: order_service.py
app/tasks/: __init__.py  consumer.py  order_tasks.py
openspec/: project.md
openspec/changes/add-order-model-endpoints/: design.md  proposal.md  tasks.md
openspec/changes/add-user-registration-auth/: design.md  proposal.md  tasks.md
openspec/changes/add-user-registration-auth/specs/users/: spec.md
openspec/changes/archive/2026-02-08-add-order-model-endpoints/specs/orders/: spec.md
openspec/changes/archive/2026-02-08-add-user-registration-auth/: tasks.md
openspec/changes/archive/2026-02-08-add-user-registration-auth/specs/auth/: spec.md
openspec/specs/auth/: spec.md
openspec/specs/orders/: spec.md
openspec/specs/users/: spec.md
tests/: conftest.py  test_auth_protected.py  test_auth_register.py  test_auth_token.py  test_orders_cache_and_events.py  test_orders_create.py  test_orders_get.py  test_orders_list.py  test_orders_patch.py
